public class Cancion {
    // Constructor sencillo para ser invocado por el Disco (Composición)
    public Cancion(String nombre, int duracion) { }
}