public class Entrada {
    // El ciclo de vida está ligado a la Gira que la emite
    public Entrada(double precio, String codigo) { }
}