public class Fan {
    public Fan(String nombre) { }

    // Agregación: Mantiene una referencia duradera a discos que ya existen
    public void escucharDisco(Disco d) { }

    // Uso: Utiliza la entrada solo para una acción puntual (entrar al concierto)
    public void comprarEntrada(Entrada e) { }
}