public class Gira {
    public Gira(String nombre) { }

    public void agregarFecha(String ciudad, Cantante artista) { }

    // Composición: La gira crea la entrada internamente
    public void generarEntrada(double precio) {
        // Internamente: new Entrada(precio, "ID-001");
    }
}