public class Instrumento {
    public Instrumento(String tipo) { }

    public void sonar() { }
}