public class Microfono {
    public void conectar() { }
}