public class PlataformaStreaming {
    public PlataformaStreaming(String nombre) { }

    // AGREGACIÓN: Los discos existen fuera de la plataforma.
    public void subirContenido(Disco d) { }
}