public class Playlist {
    // Agregación: Se construye a partir de elementos existentes.
    // El array de canciones se pasa como argumento al constructor.
    public Playlist(String nombre, Cancion[] canciones) { }

    public void sonar() { }

    public void ejecutar() {
        throw new UnsupportedOperationException("Unimplemented method 'ejecutar'");
    }
}