public class SelloDiscografico {
    public SelloDiscografico(String nombre) { }

    // Agregación: Recibe un disco ya creado por un artista
    public void producirDisco(Disco disco) { }
}